# borderless-storage

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  flake.nix  run.sh  run_dev.sh
examples/: config.toml  configuration.md  index.html
nix/: devenv-module.nix  nixos-module.nix
src/: config.rs  main.rs  metadata.rs  server.rs  storage.rs  utils.rs
tests/: README.md  run-all-tests.sh  start-server.sh  test-01-upload-download.sh  test-02-delete.sh  test-03-double-upload.sh  test-04-chunked-upload.sh  test-05-bucket-upload.sh  test-06-admin-objects.sh  test-07-deduplication.sh  test-08-metadata-headers.sh  test-09-authentication.sh  test-10-healthcheck.sh  test-11-presign-security.sh  test-12-chunked-edge-cases.sh  test-13-dedup-refcount.sh  test-14-admin-buckets.sh  test-15-request-limits.sh  test-16-cleanup-orphans.sh  test-17-cors-preflight.sh  test-18-negative-cases.sh  utils.sh
tests/data/: manifesto.md
