[package]
name = "borderless-storage"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
base64 = "0.22.1"
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
hmac = "0.12.1"
rand = "0.9.2"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
toml = "0.9.6"
tower-http = { version = "0.6.6", features = ["limit", "request-id", "timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3.22.0"
parking_lot = "0.12.4"
