[package]
name = "borderless-storage"
version = "0.1.2"
edition = "2024"
description = "A minimal S3-style object store with pre-signed URLs, chunked uploads, and a filesystem backend (based on Axum/Tokio)."
authors = [ "Christian Hammermeister <c.hammermeister@borderless-technologies.com>" ]
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["storage", "s3", "object-store", "axum", "tokio"]
categories = ["filesystem", "asynchronous", "network-programming", "web-programming::http-server"]
repository = "https://github.com/borderless-tech/borderless-storage"
homepage = "https://github.com/borderless-tech/borderless-storage"

# Keep the published crate tidy (omit CI files, .vscode, etc.)
# If you intend to publish only the library helpers, you can also switch to `include = [...]`.
exclude = [
  "db/*",
  ".github/*",
  ".vscode/*",
  ".direnv/*",
  "docker/*",
  "tarpaulin-report.html",
]

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
base64 = "0.22.1"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
futures = "0.3.31"
hex = "0.4.3"
hmac = "0.12.1"
parking_lot = "0.12.4"
rand = "0.9.2"
rusqlite = { version = "0.32.1", features = ["chrono", "bundled"] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
subtle = "2.6.1"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["io"] }
toml = "0.9.6"
tower-http = { version = "0.6.6", features = ["limit", "request-id", "timeout", "trace", "cors", "set-header"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18.1", features = ["serde", "v4", "v7"] }

[dev-dependencies]
tempfile = "3.22.0"
tower = "0.5.2"
url = "2.5.7"

[profile.release]
codegen-units = 1
lto = "fat"
strip = "symbols"
opt-level = 3
debug = false
incremental = false
